--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -68,9 +68,15 @@
       </ion-item>
       <ion-item>
         <ion-label>{{"PAGE_SETTINGS_TRACK_BREW_COORDINATES" | translate}}</ion-label>
-        <ion-checkbox (ionChange)="checkCoordinates()" (ngModelChange)="saveSettings();" [(ngModel)]="settings.track_brew_coordinates"
-                      x></ion-checkbox>
+        <ion-checkbox (ionChange)="checkCoordinates()" (ngModelChange)="saveSettings();" [(ngModel)]="settings.track_brew_coordinates"></ion-checkbox>
       </ion-item>
+      <ion-item>
+        <ion-label><h2>{{"PAGE_SETTINGS_FAST_REPEAT" | translate}}</h2>
+        <p>Activate features to repeat your brew without popover</p></ion-label>
+        <ion-checkbox  (ngModelChange)="saveSettings();" [(ngModel)]="settings.fast_brew_repeat"></ion-checkbox>
+
+      </ion-item>
+
       <ion-item>
         <ion-label>{{"PAGE_SETTINGS_SHOW_ARCHIVED_BEANS" | translate}}</ion-label>
         <ion-checkbox (ngModelChange)="saveSettings();"
