#133 - Added category for preparation to calculate BR and TDS rightly

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -127,6 +127,9 @@ ion-card-header {
 }
 ion-label {
   white-space: normal;
+  p {
+    white-space: normal;
+  }
 }
 ion-modal{
   --min-height:100%!important;
