--- a/src/app/brew/brew-popover-actions/brew-popover-actions.component.html
+++ b/src/app/brew/brew-popover-actions/brew-popover-actions.component.html
@@ -20,7 +20,7 @@
     <ion-icon name="beanconqueror-delete" slot="start"></ion-icon>
     <span>{{"POPOVER_BREWS_OPTION_DELETE" | translate}}</span>
   </ion-item>
-  <ion-item (click)="choose(getStaticActions().PHOTO_GALLERY)" [disabled]="!hasPhotos()" button tappable>
+  <ion-item (click)="choose(getStaticActions().PHOTO_GALLERY)" *ngIf="hasPhotos()" button tappable>
     <ion-icon name="beanconqueror-photo-gallery" slot="start"></ion-icon>
     <span>{{"POPOVER_BREWS_OPTION_PHOTO_GALLERY" | translate}}</span>
   </ion-item>
