--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -71,10 +71,8 @@
         <ion-checkbox (ionChange)="checkCoordinates()" (ngModelChange)="saveSettings();" [(ngModel)]="settings.track_brew_coordinates"></ion-checkbox>
       </ion-item>
       <ion-item>
-        <ion-label><h2>{{"PAGE_SETTINGS_FAST_REPEAT" | translate}}</h2>
-        <p>Activate features to repeat your brew without popover</p></ion-label>
+        <ion-label><h2>{{"PAGE_SETTINGS_FAST_REPEAT" | translate}}</h2></ion-label>
         <ion-checkbox  (ngModelChange)="saveSettings();" [(ngModel)]="settings.fast_brew_repeat"></ion-checkbox>
-
       </ion-item>
 
       <ion-item>
