--- a/src/app/helper/helper-water-hardness/helper-water-hardness.component.scss
+++ b/src/app/helper/helper-water-hardness/helper-water-hardness.component.scss
@@ -14,7 +14,7 @@
       --background: white;
 
       ion-label {
-        font-family: 'Baloo';
+        font-family: 'Baloo', sans-serif;
         font-size: 14px;
       }
     }
