--- a/src/app/brew/brew-edit/brew-edit.component.html
+++ b/src/app/brew/brew-edit/brew-edit.component.html
@@ -108,14 +108,14 @@
                  type="text"></ion-input>-->
     </ion-item>
 
-    <ion-item *ngIf="settings.brew_time === true" [style.order]="settings.brew_order.while.brew_time"
+    <ion-item *ngIf="settings.brew_time === true  && settings.coffee_first_drip_time === true  && getPreparation().style_type === PREPARATION_STYLE_TYPE.ESPRESSO" [style.order]="settings.brew_order.while.brew_time"
               lines="inset" lines="full">
       <ion-label>
         {{'BREW_DATA_CALCULATED_COFFEE_BREW_TIME' | translate}}: {{data.getFormattedCoffeeBrewTime()}}
       </ion-label>
     </ion-item>
 
-    <ion-item *ngIf="settings.coffee_blooming_time === true" [style.order]="settings.brew_order.while.coffee_blooming_time"
+    <ion-item *ngIf="settings.coffee_blooming_time === true  && getPreparation().style_type === PREPARATION_STYLE_TYPE.POUR_OVER" [style.order]="settings.brew_order.while.coffee_blooming_time"
               lines="inset">
       <ion-label position="stacked">{{"BREW_DATA_COFFEE_BLOOMING_TIME" | translate}}</ion-label>
       <ion-input [(ngModel)]="data.coffee_blooming_time" inputmode="decimal"
@@ -123,7 +123,7 @@
                  remove-empty-number
                  type="text"></ion-input>
     </ion-item>
-    <ion-item *ngIf="settings.coffee_first_drip_time === true" [style.order]="settings.brew_order.while.coffee_first_drip_time"
+    <ion-item *ngIf="settings.coffee_first_drip_time === true  && getPreparation().style_type === PREPARATION_STYLE_TYPE.ESPRESSO" [style.order]="settings.brew_order.while.coffee_first_drip_time"
               lines="inset">
       <ion-label position="stacked">{{"BREW_DATA_COFFEE_FIRST_DRIP_TIME" | translate}}</ion-label>
       <ion-input [(ngModel)]="data.coffee_first_drip_time" inputmode="decimal"
