--- a/src/app/preparation/preparation-edit/preparation-edit.component.html
+++ b/src/app/preparation/preparation-edit/preparation-edit.component.html
@@ -15,7 +15,7 @@
         <ion-item>
           <ion-label position="stacked">{{"PREPARATION_TYPE" | translate}}</ion-label>
           <ion-select #type="ngModel" [(ngModel)]="data.type" cancelText="{{'CANCEL'| translate }}" name="type"
-                      okText="{{'CHOOSE'| translate }}">
+                      (ngModelChange)="typeChanged()"  okText="{{'CHOOSE'| translate }}">
             <ion-select-option *ngFor="let key of preparationTypeEnum | keys"
                                value="{{key}}">{{'PREPARATION_TYPE_' + key | translate}}</ion-select-option>
           </ion-select>
@@ -27,7 +27,7 @@
                      spellcheck="false" type="text">
           </ion-input>
         </ion-item>
-        <ion-item>
+        <ion-item [disabled]="data.type !== preparationTypeEnum.CUSTOM_PREPARATION">
           <ion-label position="stacked">{{"PREPARATION_TYPE_STYLE" | translate}}*</ion-label>
           <ion-select #name="ngModel" [(ngModel)]="data.style_type" cancelText="{{'CANCEL'| translate }}"
                       name="style_type" okText="{{'CHOOSE'| translate }}">
