--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -58,7 +58,7 @@
         <ion-checkbox (ionChange)="checkCoordinates()" (ngModelChange)="saveSettings();" [(ngModel)]="settings.track_brew_coordinates"></ion-checkbox>
       </ion-item>
       <ion-item>
-        <ion-label><h2>{{"PAGE_SETTINGS_FAST_REPEAT" | translate}}</h2></ion-label>
+        <ion-label><h2>{{"PAGE_SETTINGS_FAST_REPEAT" | translate}}</h2><p>Wenn das feature aktiviert ist hast du die möglichkeit bla bla blaWenn das feature aktiviert ist hast du die möglichkeit bla bla blaWenn das feature aktiviert ist hast du die möglichkeit bla bla blaWenn das feature aktiviert ist hast du die möglichkeit bla bla blaWenn das feature aktiviert ist hast du die möglichkeit bla bla blaWenn das feature aktiviert ist hast du die möglichkeit bla bla bla</p></ion-label>
         <ion-checkbox  (ngModelChange)="saveSettings();" [(ngModel)]="settings.fast_brew_repeat"></ion-checkbox>
       </ion-item>
 
