--- a/src/app/brew/brew-popover-actions/brew-popover-actions.component.html
+++ b/src/app/brew/brew-popover-actions/brew-popover-actions.component.html
@@ -4,6 +4,10 @@
     <ion-icon name="beanconqueror-repeat" slot="start"></ion-icon>
     <span>{{"POPOVER_BREWS_OPTION_REPEAT" | translate}}</span>
   </ion-item>
+  <ion-item (click)="choose(getStaticActions().FAST_REPEAT)" *ngIf="hasFastBrewActivated()" button tappable>
+    <ion-icon name="beanconqueror-fast-repeat" slot="start"></ion-icon>
+    <span>{{"POPOVER_BREWS_OPTION_FAST_REPEAT" | translate}}</span>
+  </ion-item>
   <ion-item (click)="choose(getStaticActions().DETAIL)" button tappable>
     <ion-icon name="beanconqueror-detail" slot="start"></ion-icon>
     <span>{{"POPOVER_BREWS_OPTION_DETAIL" | translate}}</span>
@@ -25,12 +29,8 @@
     <span>{{"POPOVER_BREWS_OPTION_PHOTO_GALLERY" | translate}}</span>
   </ion-item>
   <ion-item (click)="choose(getStaticActions().SHOW_MAP_COORDINATES)" *ngIf="hasCoordinates()" button tappable>
-    <ion-icon name="navigate-circle-outline" slot="start"></ion-icon>
+    <ion-icon name="beanconqueror-map" slot="start"></ion-icon>
     <span>{{"POPOVER_BREWS_OPTION_MAP_COORDINATES" | translate}}</span>
-  </ion-item>
-  <ion-item (click)="choose(getStaticActions().FAST_REPEAT)" *ngIf="hasFastBrewActivated()" button tappable>
-    <ion-icon name="repeat-outline" slot="start"></ion-icon>
-    <span>{{"POPOVER_BREWS_OPTION_FAST_REPEAT" | translate}}</span>
   </ion-item>
 </ion-list>
 </ion-content>
