#136 - Added roaster typeahead search, fixed padding issues on popover select

--- a/src/app/beans/bean-popover-actions/bean-popover-actions.component.scss
+++ b/src/app/beans/bean-popover-actions/bean-popover-actions.component.scss
@@ -17,4 +17,11 @@
   ion-content, ion-content::part(scroll) {
     background:white;
   }
+
+  ion-content::part(scroll) {
+
+    padding-left:0px;
+    padding-right:0px;
+
+  }
 }
