--- a/src/app/beans/beans-add/beans-add.component.html
+++ b/src/app/beans/beans-add/beans-add.component.html
@@ -45,11 +45,19 @@
     </ion-item>
     <ion-item>
       <ion-label position="stacked">{{"BEAN_DATA_ROASTER" | translate}}</ion-label>
-      <ion-input #roaster="ngModel" [(ngModel)]="data.roaster" name="roaster"
+      <ion-input #roaster="ngModel" (ionBlur)="onRoasterSearchLeave($event)" (ionChange)="onRoasterSearchChange($event)" [(ngModel)]="data.roaster" name="roaster"
                  placeholder="{{'BEAN.PLACE_HOLDER.BEAN_DATA_ROASTER' | translate}}" spellcheck="false" type="text"
                  autocapitalize="sentences">
       </ion-input>
     </ion-item>
+    <ion-item *ngIf="roasterResultsAvailable" lines="none" style="box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);margin-top: 5px;margin-bottom: 5px;">
+      <ion-list style="width: 100%; max-height: 200px; overflow-y: auto; background: white;">
+        <ion-item (click)="roasterSelected(result)" *ngFor="let result of roasterResults" button>
+          <ion-label>{{result}}</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-item>
+
     <ion-item>
       <ion-label position="stacked">{{"BEAN_DATA_VARIETY" | translate}}</ion-label>
       <ion-input #variety="ngModel" [(ngModel)]="data.variety" name="variety"
