--- a/src/app/beans/beans-edit/beans-edit.component.html
+++ b/src/app/beans/beans-edit/beans-edit.component.html
@@ -52,7 +52,7 @@
       </ion-input>
     </ion-item>
     <ion-item *ngIf="roasterResultsAvailable" lines="none" style="margin-top: 5px;margin-bottom: 5px;">
-      <ion-list style="width: 100%; max-height: 200px; overflow-y: auto; background: #E2E2E2;">
+      <ion-list style="width: 100%; max-height: 200px; overflow-y: auto; background: #F2F2F2;">
         <ion-item (click)="roasterSelected(result)" *ngFor="let result of roasterResults;let last = last" button lines="{{last?'none':''}}" style="--background:#E2E2E">
           <ion-label>{{result}}</ion-label>
         </ion-item>
